--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 
     <application
         android:allowBackup="true"
@@ -21,6 +24,45 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
+        <activity
+            android:name=".WifiInfoDemo"
+            android:exported="false" />
+        <activity
+            android:name=".TemperatureDemo"
+            android:exported="false" />
+        <activity
+            android:name=".StepCountDemo"
+            android:exported="false" />
+        <activity
+            android:name=".Gyroscope"
+            android:exported="false" />
+        <activity
+            android:name=".AcclGyrDemo"
+            android:exported="false" />
+        <activity
+            android:name=".Accelerometer"
+            android:exported="false" />
+        <activity
+            android:name=".EnableWifiLatest"
+            android:exported="false" />
+        <activity
+            android:name=".BluetoothEnableDisable"
+            android:exported="false" />
+        <activity
+            android:name=".WifiEnableDisable"
+            android:exported="false" />
+        <activity
+            android:name=".BluetoothDemo"
+            android:exported="false" />
+        <activity
+            android:name=".AcceloDemo"
+            android:exported="false" />
+        <activity
+            android:name=".ProximitySensorDemo"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity12"
             android:exported="false" />
@@ -64,7 +106,7 @@
             android:name=".SaveActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".MainActivity13"
             android:exported="false" />
         <activity
             android:name=".PhNumLoginActivity"
@@ -88,7 +130,7 @@
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
-            android:name=".MainActivity13"
+            android:name=".MainActivity14"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
